# Optimisation_thermique_four

./: .gitignore  CMakeLists.txt  README.md  ancien_utils_mefhpp.txt  explication_CMAKE.txt  explication_utilsmefhpp.txt
data/: l_curve.csv  noeuds_T0.csv  noeuds_T_direct.csv  noeuds_T_opt.csv  noeuds_T_opt_brut.csv  noeuds_T_opt_pen.csv  noeuds_T_opt_reg.csv  noeuds_T_res.csv  noeuds_Tk_1.csv  triangles.csv
include/: experiences.hpp  export.hpp  maillage.hpp  optimisation.hpp  solver_direct.hpp  utils_mef.hpp
scripts/: affichage.py  visualisation_maillage.py
src/: experiences.cpp  export.cpp  maillage.cpp  main.cpp  optimisation.cpp  solver_direct.cpp  utils_mef.cpp
